src/stylesheets/cart/_cartListing.scss
#cart-listing {
  display: flex;

  border-bottom: .5px #d6d6d6 solid;
  border-top: .5px #d6d6d6 solid;
  padding: 2rem 0;

  .col {
    padding: .5rem;
  }

  h4, h3 {
    margin: 0;
  }

  h3 {
    font-size: .75rem;
    font-weight: 500;
    letter-spacing: -.25px;
    text-transform: uppercase;
    margin-bottom: 2rem;
  }

  .quantity, .price {
    color: black;
    font-size: .75rem;
    font-weight: 500;
  }

  .quantity {
    font-size: .85rem;
  }

  .details-container {
    display: flex;

    img {
      width: 150px;
      object-fit: contain;
      height: 150px;
    }

    h4 {
      font-weight: 500;
      letter-spacing: -.5px;
    }

    span {
      font-weight: 400;
      font-size: .75rem;
    }

    h5 {
      text-transform: uppercase;
      font-size: .75rem;
      letter-spacing: -.6px;
      color: #00ab06;
    }
  }

  #remove-from-cart {
    font-size: .7rem;
    letter-spacing: -.5px;
    color: $redText;
    text-transform: uppercase;

    width: 100%;
    margin-top: 1.5rem;
  }

  .other-details-container {
    display: flex;
    justify-content: space-around;
    flex-grow: 1;
  }

  button {
    background-color: transparent;
    border: none;
    cursor: pointer;
    // font-size: 1.25rem;
    line-height: 1rem;
    padding: 0;
  }
}

/* Large tablet: 1023px - 1200px*/
@media only screen and (max-width: 1200px) {
  #cart-listing { 
    flex-direction: column;
    justify-content: space-between;
    padding: 1rem 0;

    h3 {
      margin-bottom: .5rem;
    }

    .details-container {
      margin-bottom: 1rem;
    }

    .other-details-container {
      border-top: .5px #d6d6d6 solid;
      justify-content: space-between;
      padding-top: 1rem;
    }
  }
}

/* Small tablet to large tablet: 767px - 1023px */
@media only screen and (max-width: 1023px) {
  
}

/* small phones to small tablets: 480px - 767px */
@media only screen and (max-width: 767px) {
  #cart-contents {
    flex-direction: column;
  }
}

/* small phones: 0 - 480px */
@media only screen and (max-width: 480px) {

}

